Corrected form height overflow

--- a/Django_webdav_tests/Files_list/static/style/base_style.css
+++ b/Django_webdav_tests/Files_list/static/style/base_style.css
@@ -110,7 +110,7 @@ header {
     position: sticky;
     left: calc(15%);
     bottom: 0px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #line_icon {
